# wacom_profile

./: README.md  config.cfg  pyproject.toml  wacomProfile.py
wacom_profile/: __init__.py  wacom_profile.py
