[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wacom_profile"
version = "0.1.0"
authors = [
  { name="Aaron Segura" },
]
description = "Wacom Intuos tablet command mapping."
readme = "README.md"
license = { text="License :: OSI Approved :: GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.5"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flake8",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.5"
]
keywords = ["wacom", "intuos"]
dependencies = []

[tool.setuptools]
packages = ["wacom_profile"]

[project.scripts]
"wacom_profile" = "wacom_profile.wacom_profile:main"

[project.urls]
"Homepage" = "https://github.com/aaronsegura/wacom_profile"
"Bug Tracker" = "https://github.com/aaronsegura/wacom_profile/issues"
